--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -34,7 +34,7 @@ h2 {
 .news {
     display: grid;
     
-    grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
    
     grid-gap: 2rem;
 }
