--- a/src/views/news.ejs
+++ b/src/views/news.ejs
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="header__logo">Today's News</div>
+        <div class="header__logo" style="font-size:large;font-weight:bold">Today's News</div>
         <%- include('./partials/search.ejs') %>
     </header>
 
